@@ -1,0 +1,4 @@
+The freedesktop.org specification for ".desktop" files (used by libplayers) can be 
+found here:
+
+http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-0.9.4.html
