@@ -2,6 +2,8 @@ Tue, 13 Jun 2006 20:20:07 +0200 <thp@perli.net>
 	* Removed ipod-dbus support (has now its extra branch in svn)
 	* Bumped version date + release date
 	* You can run gPodder on python2.3 again (instead of 2.4 only)
+	* libplayers now handles .desktop command lines according to 
+	  the freedesktop.org spec (%F, %f, %U and %u supported)
 
 Fri, 09 Jun 2006 12:37:54 +0200 <thp@perli.net>
 	* Applied a modified version of Camille's patch to get videos 
